# libgoodix-tls

./: .gitignore  README.md  meson.build
include/: goodix.h
src/: goodix.c  goodix_internal.h  goodix_usb.c
tools/: goodix-capture.c
